bunch of code clean up. removed lots of warnings - not enough though fixes #72